[build-system]
requires = ["hatchling>=1.22"]
build-backend = "hatchling.build"

[project]
name = "crypto-pay-api"
version = "0.1.1"
description = "Sync + Async Python client for Telegram Crypto Pay API (Crypto Bot)"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "medovi40k" }]
keywords = ["telegram", "crypto", "cryptopay", "api", "asyncio", "httpx", "requests"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
]

dependencies = [
  "httpx>=0.24",
  "requests>=2.31",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-asyncio>=0.23",
  "ruff>=0.4",
  "mypy>=1.8",
  "types-requests>=2.31",
]

[project.urls]
Homepage = "https://github.com/medovi40k/crypto-pay-api"
Repository = "https://github.com/medovi40k/crypto-pay-api"
Issues = "https://github.com/medovi40k/crypto-pay-api/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/crypto_pay_api"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = false
no_implicit_optional = true
strict_optional = true